<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ADD8E6">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="203dp"
        android:layout_height="21dp"
        android:layout_marginTop="36dp"
        android:text="@string/number_of_critical_issues"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="248dp"
        android:layout_height="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/number_of_non_critical_issue"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="125dp"
        android:layout_height="19dp"
        android:text="@string/hazard_level"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="202dp"
        android:layout_height="18dp"
        android:layout_marginStart="2dp"
        android:text="@string/how_long_ago"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="108dp"
        android:layout_height="21dp"
        android:layout_marginTop="2dp"
        android:text="@string/inspection_type_listview"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/instypetextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="2dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="#FA0303"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/criticalissuetextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="36dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="#FF0000"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/noncriticalissuetextview"
        android:layout_width="58dp"
        android:layout_height="19dp"
        android:layout_marginTop="12dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="#FB0000"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="@+id/criticalissuetextview"
        app:layout_constraintTop_toBottomOf="@+id/criticalissuetextview" />

    <TextView
        android:id="@+id/hazardlevltextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="#FF0000"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toEndOf="@+id/textView13"
        app:layout_constraintTop_toTopOf="@+id/textView13" />

    <TextView
        android:id="@+id/datetextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:text=""
        android:textColor="#F60B0B"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <ImageView
        android:id="@+id/hazardicon"
        android:layout_width="69dp"
        android:layout_height="59dp"
        android:layout_marginEnd="4dp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.506"
        app:srcCompat="@drawable/ic_launcher_foreground" />


</androidx.constraintlayout.widget.ConstraintLayout>